# claymore-backend

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  celeryconfig.py  docker-compose.yml  example_data.py  main.py  models.py  rabbitmq.conf  readme.md  requirements.txt  setup.py  validators.py
.sqlx/: query-00edd740c70577f254e8ba9733f4e1ba1590f63c8711b84f93702a98e1529787.json  query-03475fce47c3e2beae6b32a72a666a01801f953002c54caf1fbb7c8370074889.json  query-03c2e2462de1a3f7ef32a7afb8483e4bde217f6250facc3ae99fb37c25659ef7.json  query-0419eb1b0cfbf58b26c37990a857a4ff051ae2e252eac380a2e8ed74d612ba4f.json  query-04298c62f228b984dd83ec436171d6ca9ad9f775ee9a173f30d21fdc9b259f85.json  query-04fb511f08f97d52d38929551c1c2b04178d7b9b4d420fda71828e8bbfeb22d0.json  query-060f52f179b13044e8195f0f040827368c1c95a3f2d74c6017103e4a002e660c.json  query-06c2429c7f1a946d26052d15938431458a3661b64fecc78b09596cefdb277ea4.json  query-0832265c2eaeb8c04e4d09d555beae5358986053502ccee200cfc77ef53e0aa5.json  query-0a28c0f4311572b53233320506230bccccad74d0744c2ba18c5b02e5a38edceb.json  query-0a34d4de7c54b253b8221bbdf4ac380c48875abf467a666f745f9bcadee433e9.json  query-0a82e16309c401c43b648b2dedd0cb0191a83afae72e70a6efc1e82efe1246bb.json  query-0bbe85484c53417600527e4c1bbb7c18576aca230108b08f9eb6b60e4c1852bb.json  query-0eaf9560a4c6c46a130b7cb3761fe481ce68e21f4683f98ef49abc5b92aa2a37.json  query-115db2cdce615e330fd76d1935740f25be9216640c0f66515739b4696997ad78.json  query-167ef01c0778c8926b443a3e524af7762bb7c08e3f01c13b6bfcee2ea7f008f2.json  (+164 more)
endpoints/: __init__.py  dialogs.py  (+3 more)
(+60 files in other folders)
