[package]
name = "claymore_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argon2 = "0.5.0"
async-openai = "0.17.1"
async-trait = "0.1.68"
axum = { version = "0.6.12", features = ["tower-log", "multipart"] }
clap = { version = "4.2.1", features = ["env", "derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
elasticsearch = "8.5.0-alpha.1"
env_logger = "0.10.0"
futures = "0.3.28"
hmac = "0.12.1"
itertools = "0.10.5"
jwt = "0.16.0"
lapin = { version = "2.3.1", features = ["serde_json"] }
log = "0.4.17"
md5 = "0.7.0"
nanoid = "0.4.0"
pdf-extract = "0.6.4"
rand = "0.8.5"
regex = "1.7.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.6"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate"] }
thiserror = "1.0.40"
tiktoken-rs = "0.5.6"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
tokio-util = "0.7.8"
tower-http = { version = "0.4.0", features = ["trace"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
